[package]
name = "client_server_chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysinfo = "0.29.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8.5"
steganography = "1.0.2"
image = "0.24.7"
base64 = "0.21.5"
